...
                android:padding="16dp"
                android:text="…"
                android:textColor="@color/searchHintTextColor"
                android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/suggestionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
...
