...
    <!-- This preference does not set Pangoline as the default browser but instead links to Android's
     "default apps" settings screen or if not supported by this Android version to a SUMO page describing
     how to set Pangoline as a default browser.
      %1$s will be replaced by the app name (e.g. Firefox Pangoline) -->
    <string name="preference_default_browser2">Make %1$s default browser</string>

    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>

    <!-- A link to SUMO at the end of the summary (preference_mozilla_telemetry_summary2) of the "Send anonymous usage data" setting. -->
    <string name="preference_mozilla_telemetry_summary">Learn more</string>

    <!-- %1$s will be replaced with the name of the app (Pangoline) -->
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>

    <!-- In-app link (in settings) to Pangoline privacy notice. -->
    <string name="preference_privacy_notice">Privacy Notice</string>

    <!-- Item in Preferences that shows the about page. Parameter 1 is the app name, i.e. Pangoline. -->
    <string name="preference_about">About %1$s</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_search_installed_search_engines">Installed search engines</string>

    <!-- Action for restoring the default list of search engines -->
    <string name="preference_search_restore">Restore default search engines</string>
...
    <string name="content_description_trackers_blocked">Number of trackers blocked</string>

    <!-- Content description (not visible, for screen readers etc.): This is the description for the switch in the menu that temporarily disables/enables
         content blocking for the current session -->
    <string name="content_description_blocking_switch">Block trackers</string>

    <string name="your_rights">Your Rights</string>

    <string name="external_app_prompt_title">Open link in another  app</string>
    <!-- This string is shown when the user has clicked a link that needs to be opened in a different app.
         Argument 2 is the external app name, argument 1 is our name (Pangoline). -->
    <string name="external_app_prompt">You can leave %1$s to open this link in %2$s.</string>
    <!-- This text is the title of a dialog shown if no app could be found for a custom link protocol. -->
...
    <string name="contextmenu_image_share">Share image</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_copy">Copy image address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_save">Save image</string>
    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>

    <!-- This is a warning shown in the browser's context menu (when long pressing an image). %1$s will be replaced with the long name of the app (e.g. Pangoline). -->
    <string name="contextmenu_image_warning"><![CDATA[Saved and shared images <b>will not be deleted</b> when you erase %1$s history.]]></string>

    <!-- First run tour (Default browser): Title -->
    <string name="firstrun_defaultbrowser_title">Power up your privacy</string>
...
    <!-- The user visible description of the "notification channel" (Android 8+ feature) for the ongoing notification shown while a browsing session is active.
    The recommended maximum length is 300 characters; the value may be truncated if it is too long. %1$s will be replaced with the name of the app (e.g. Pangoline).
    -->
    <string name="notification_browsing_session_channel_description">Notifications let you erase your %1$s session with a tap. You don’t need to open the app or see what’s running in your browser.</string>

    <!-- Label for a button in the "tabs tray" to erase the browsing history (closes all tabs and removes associated data). -->
    <string name="tabs_tray_action_erase">Erase browsing history</string>

    <!-- If the user decides to open the current page in another browser and if Firefox is not installed then we show this
      item in the list of browsers. Clicking it will open the app store installed on the device (usually that's Google Play). -->
    <string name="download_firefox">Download Firefox</string>

    <!-- Text shown in the "Your rights" screen.
...
